k8s-manifests/nginx-deployment-manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy
  namespace: nginx-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      resources:
        requests:
          memory: 128Mi
          cpu: "100m"
        limits:
          memory: 256Mi
          cpu: "200m"
      containers:
        - name: nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
  namespace: nginx-gateway
spec:
  type: ClusterIP
  selector:
    app: nginx-proxy
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-proxy-ingress
  namespace: nginx-gateway
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  ingressClassName: nginx
  rules:
  - host: snapp-webapp.snapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-proxy
            port:
              number: 80
