k8s-manifests/snapp-project.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: snapp-project
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapp-webapp
  namespace: snapp-project
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: snapp-webapp
  template:
    metadata:
      labels:
        app: snapp-webapp
    spec:
      containers:
      - name: webapp
        image: registry.snapp.com/snapp-devops/snapp-task-local
        ports:
          - containerPort: 8000
        resources:
          requests:
            memory: 128Mi
            cpu: "100m"
          limits:
            memory: 256Mi
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: snapp-webapp
  namespace: snapp-project
spec:
  type: ClusterIP
  selector:
    app: snapp-webapp
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: snapp-webapp-policy
  namespace: snapp-project
spec:
  podSelector:
    matchLabels:
      app: snapp-webapp
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nginx-gateway
      ports:
        - protocol: TCP
          port: 8000
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
